--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-carousel-minimal": "^1.4.1",
+    "react-country-region-selector": "^3.6.1",
     "react-dom": "18.2.0",
     "react-flickity-component": "^3.6.3",
     "react-owl-carousel": "^2.3.3",
