--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "react-carousel-minimal": "^1.4.1",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "18.2.0",
-    "react-flickity-component": "^3.6.3",
     "react-owl-carousel": "^2.3.3",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "slick-carousel": "^1.8.1"
   },
