--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
+    "react-share": "^4.4.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
