--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.0",
+    "@stripe/react-stripe-js": "^1.16.1",
     "axios": "^1.2.1",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
@@ -31,7 +32,8 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "stripe": "^11.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
