--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.0",
     "@stripe/react-stripe-js": "^1.16.1",
+    "aos": "^2.3.4",
     "axios": "^1.2.1",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
@@ -24,6 +25,7 @@
     "react-carousel-minimal": "^1.4.1",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-owl-carousel": "^2.3.3",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.5",
