--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.0",
     "@stripe/react-stripe-js": "^1.16.1",
+    "@stripe/stripe-js": "^1.46.0",
     "aos": "^2.3.4",
     "axios": "^1.2.1",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "flickity": "^2.3.0",
-    "next": "13.0.3",
+    "next": "^13.0.3",
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-carousel-minimal": "^1.4.1",
