--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "flickity": "^2.3.0",
+    "micro": "^10.0.1",
+    "micro-cors": "^0.1.1",
     "next": "^13.0.3",
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
