--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "micro": "^10.0.1",
     "micro-cors": "^0.1.1",
     "next": "^13.0.3",
+    "next-auth": "^4.18.7",
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-carousel-minimal": "^1.4.1",
