--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_URL=https://www.fly8.us/
 # NEXTAUTH_URL=http://localhost:30/
 JWT_SECRET=ad17203aa91ecdd172248b1e6de78cdb
+EmailJS_SERVICE_ID="service_ojeihpn"
+EmailJS_TEMPLATE_ID="template_1z1s2hr"
+EmailJS_PUBLIC_KEY="tRRATwKkMHYiurDaS"
