--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -17,6 +18,7 @@
     "@stripe/stripe-js": "^1.46.0",
     "aos": "^2.3.4",
     "axios": "^1.2.1",
+    "emailjs": "^4.0.1",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "flickity": "^2.3.0",
